--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -160,17 +160,13 @@ div#root {
         margin-left:34px;
         margin-right:34px;
         width:88%;
-        @media screen and (max-width:400px) {
-          max-width:350px;
-        }
         @media screen and (max-width:767px) {
+          max-width:350px;
           padding:16px;
         }
         @media screen and (min-width:768px) {
           padding:20px 24px;
           // max-width: 635px;
-        }
-        @media screen and (min-width:1024px) {
           width:635px;
         }
         &.all-container {
